<resources>

    <string translatable="false" name="app_name">Sensors</string>

    <string translatable="false" name="app_version">2.0.1</string>

    <string translatable="false" name="app_developer">Calin Tataru</string>

    <!--ABOUT-->

    <string name="about_name">Name</string>

    <string name="about_vendor">Vendor</string>

    <string name="about_version">Version</string>

    <string name="about_power">Power</string>

    <string name="about_resolution">Resolution</string>

    <string name="about_maximum_range">Maximum range</string>

    <!--ACTIONS-->

    <string name="action_clear">Clear</string>

    <string name="action_about">About sensor</string>

    <string name="action_restart">Restart</string>

    <!--ERRORS-->

    <string name="err_shortcuts">Maximum 4 shortcuts</string>

    <string name="err_no_sensors_available">No sensors available</string>

    <string name="err_could_not_initiate_purchase">Could not initiate purchase</string>

    <!--MESSAGES-->

    <string name="msg_app_restart_required">App restart may be required</string>

    <string name="msg_thank_you_for_your_contribution">Thank you for your contribution</string>

    <!--NAVIGATION-->

    <string name="navigation_accelerometer">Accelerometer</string>

    <string name="navigation_ambient_temperature">Ambient temperature</string>

    <string name="navigation_gravity">Gravity</string>

    <string name="navigation_gyroscope">Gyroscope</string>

    <string name="navigation_light">Light</string>

    <string name="navigation_linear_acceleration">Linear acceleration</string>

    <string name="navigation_magnetic_field">Magnetic field</string>

    <string name="navigation_pressure">Pressure</string>

    <string name="navigation_proximity">Proximity</string>

    <string name="navigation_relative_humidity">Relative humidity</string>

    <string name="navigation_rotation_vector">Rotation vector</string>

    <string name="navigation_settings">Settings</string>

    <string name="navigation_feedback">Send feedback</string>

    <string name="navigation_donation">Support development</string>

    <!--OTHERS-->

    <string name="time">Time</string>

    <string name="data">Data</string>

    <string name="x_axis">x-axis</string>

    <string name="y_axis">y-axis</string>

    <string name="z_axis">z-axis</string>

    <!--PREFERENCES-->

    <string name="pref_theme">Theme</string>

    <string name="pref_shortcuts">Shortcuts</string>

    <string name="pref_version">Version</string>

    <string name="pref_developer">Developer</string>

    <string-array name="pref_theme"><item>Auto</item><item>Day</item><item>Night</item></string-array>

    <string-array translatable="false" name="pref_theme_values"><item>0</item><item>1</item><item>2</item></string-array>

    <!--MEASUREMENT UNITS-->

    <string translatable="false" name="celsius">°C</string>

    <string translatable="false" name="centimetre">cm</string>

    <string translatable="false" name="lux">lx</string>

    <string translatable="false" name="metre_per_second_squared">m/s²</string>

    <string translatable="false" name="microtesla">μT</string>

    <string translatable="false" name="millibar">mbar</string>

    <string translatable="false" name="percentage">%</string>

    <string translatable="false" name="radian_per_second">rad/s</string>

    <string translatable="false" name="unitless">unitless</string>

</resources>
